# sim_task_agv

./: README.md
tortoisebotpromax_firmware/config/: lidar.lua
tortoisebotpromax_firmware/launch/: custom_agv_task.launch
tortoisebotpromax_firmware/rviz/: aruco_opencv_debug.rviz  config.rviz
tortoisebotpromax_navigation/launch/: custom_agv_task.launch
tortoisebotpromax_navigation/maps/: custom_agv_task.pgm  custom_agv_task.yaml
tortoisebotpromax_navigation/param/: costmap_common_params.yaml  sim_dwa_local_planner_params.yaml
tortoisebotpromax_slam/launch/: custom_agv_task.launch  map_saver.launch
waypoints_server/: CMakeLists.txt  package.xml
waypoints_server/include/waypoints_server/: WaypointsServerLoaderSender.h  WaypointsServerSaver.h
waypoints_server/launch/: loader.launch  saver.launch
waypoints_server/saved_waypoints/: example.yaml
waypoints_server/src/: WaypointsServerLoaderSender.cpp  WaypointsServerSaver.cpp  waypoints_server_loader_sender.cpp  waypoints_server_saver.cpp
